@@ -31,7 +31,6 @@
 #include "windows.h"
 #include "winresource.h"
 
-
 /*
  * Dialogs
  */
@@ -39,10 +38,10 @@
 /* About */
 ABOUT_BOX DIALOG DISCARDABLE  32, 32, 240, 105
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_TABSTOP  | DS_CENTERMOUSE
-CAPTION "About Cygwin/X"
+CAPTION "About " PROJECT_NAME
 FONT 8, "MS Sans Serif"
 BEGIN
-  CONTROL               "Cygwin/X Website", ID_ABOUT_WEBSITE, "Button",
+  CONTROL               PROJECT_NAME " Website", ID_ABOUT_WEBSITE, "Button",
                         BS_OWNERDRAW | WS_TABSTOP, 30, 45, 75, 15
   CONTROL               "Change Log", ID_ABOUT_CHANGELOG, "Button",
                         BS_OWNERDRAW | WS_TABSTOP, 135, 45, 75, 15
@@ -53,7 +52,7 @@ BEGIN
 
   DEFPUSHBUTTON		"Dismiss", IDOK, 95, 85, 50, 15
 
-  CTEXT			"Welcome to the preliminary About box for the Cygwin/X X Server.  This dialog was created on 2004/03/25 and will eventually be filled with more useful information.  For now, use the links below to learn more about the Cygwin/X project.", IDC_STATIC, 5, 5, 230, 35
+  CTEXT			"Welcome to the preliminary About box for the " PROJECT_NAME " X Server.  This dialog was created on 2004/03/25 and will eventually be filled with more useful information.  For now, use the links below to learn more about the " PROJECT_NAME " project.", IDC_STATIC, 5, 5, 230, 35
 END
 
 
@@ -62,12 +61,12 @@ END
 DEPTH_CHANGE_BOX DIALOG DISCARDABLE	32, 32, 180, 100
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_CENTERMOUSE
 FONT 8, "MS Sans Serif"
-CAPTION "Cygwin/X"
+CAPTION PROJECT_NAME
 BEGIN
   DEFPUSHBUTTON		"Dismiss", IDOK, 66, 80, 50, 14
-  CTEXT			"Cygwin/X", IDC_STATIC, 40, 12, 100, 8
+  CTEXT			PROJECT_NAME, IDC_STATIC, 40, 12, 100, 8
   CTEXT			"Disruptive screen configuration change.", IDC_STATIC, 7, 40, 166, 8
-  CTEXT			"Restore previous resolution to use Cygwin/X.", IDC_STATIC, 7, 52, 166, 8
+  CTEXT			"Restore previous resolution to use " PROJECT_NAME ".", IDC_STATIC, 7, 52, 166, 8
 END
 
 
@@ -76,7 +75,7 @@ END
 EXIT_DIALOG DIALOG DISCARDABLE	32, 32, 180, 78
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_TABSTOP | DS_CENTERMOUSE
 FONT 8, "MS Sans Serif"
-CAPTION "Cygwin/X - Exit?"
+CAPTION PROJECT_NAME " - Exit?"
 BEGIN
   PUSHBUTTON "E&xit", IDOK, 55, 56, 30, 14
   DEFPUSHBUTTON "&Cancel", IDCANCEL, 95, 56, 30, 14
